tests/passing/unit_tuple.tails
func b(x: _) -> unit:
  pass

func tests() -> unit:
  let a: (unit) = (pass,)

  b(a)
