tests/failing/declare_parameter_redefine.tails
func a(b: int, b: int) -> unit:
  pass

func tests() -> unit:
  a(123)
